fix padding header overflow prob in mobile

--- a/client/index.css
+++ b/client/index.css
@@ -151,6 +151,9 @@ section {
 
 /***** ALL MOBILE *****/
 @media only screen and (max-width: 575px) {
+  header {
+    overflow: hidden;
+  }
 
   /* hero */
 	.hero .img-div {
